# vertebra

./: .gitignore  .gitmodules  Makefile.am  README  TODO  configure.ac  deps.sh  index.html  install-deps.sh  install.sh  loudmouth-whitespace.patch
docs/: agent  ejabberd  integration
download/: ChangeLog-0.4.5
integration/: README  Rakefile  agent_interaction_spec.rb  cavalcade_spec.rb  entrepot_spec.rb  herault_spec.rb  spec_helper.rb
integration/config/: authorized_jids.txt  cavalcade.cfg  client.yml  entrepot.cfg  herault.cfg  herault.yml  node_agent.yml  rd00_client.yml  slice_agent.yml  vertebractl.conf
